--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -9,7 +8,36 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg_gradiente"
     tools:context=".fragment.HomeFragment">
+
+    <ImageView
+        android:id="@+id/img"
+        android:layout_margin="15dp"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/text"
+        android:layout_width="50pt"
+        android:layout_height="50pt" />
+
+    <TextView
+        android:id="@+id/text"
+        android:text="@string/app_name"
+        android:textColor="@android:color/white"
+        android:layout_centerInParent="true"
+        android:textSize="50sp"
+        android:elevation="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:text="@string/name"
+        android:textColor="@android:color/white"
+        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/text"
+        android:elevation="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <ImageButton
         android:id="@+id/fab"
@@ -20,23 +48,9 @@
         android:src="@drawable/ic_add"
         android:elevation="6dp"
         android:layout_marginStart="19dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
         android:layout_marginTop="15dp"
         android:contentDescription="@null" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:src="@drawable/ic_add"
-        app:fabSize="normal"
-        app:elevation="6dp"
-        app:pressedTranslationZ="12dp"
-        app:borderWidth="0dp"
-        app:layout_anchorGravity="bottom|right|end"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_alignTop="@+id/fab"
-        android:layout_toEndOf="@+id/fab" />
 
 </RelativeLayout>
