--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,4 +4,9 @@
         <item name="colorPrimaryDark">#303F9F</item>
         <item name="colorAccent">#00bcd4</item>
     </style>
+
+    <style name="AppTheme.statusBar" parent="AppTheme">
+        <item name="android:windowTranslucentStatus">true</item>
+    </style>
+
 </resources>
