add animation in activity

--- a/app/src/main/res/layout/fragment_animation.xml
+++ b/app/src/main/res/layout/fragment_animation.xml
@@ -3,4 +3,6 @@
     android:id="@+id/recycler_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scrollbars="vertical" />
+    android:clipToPadding="false"
+    android:scrollbars="vertical"
+    android:scrollbarStyle="outsideOverlay"/>
