--- a/app/src/main/res/layout/activity_detail1.xml
+++ b/app/src/main/res/layout/activity_detail1.xml
@@ -1,58 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:orientation="vertical"
     tools:context=".DetailActivity">
 
     <ImageView
         android:id="@+id/img_header"
-        android:src="@drawable/img_lake"
-        android:scaleType="centerCrop"
-        android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:contentDescription="@null" />
+        android:layout_weight="1"
+        android:contentDescription="@null"
+        android:scaleType="centerCrop"
+        android:src="@drawable/img_lake" />
 
     <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:paddingTop="@dimen/activity_vertical_margin">
 
         <ImageButton
             android:id="@+id/btn"
-            android:layout_alignParentEnd="true"
-            android:src="@drawable/ic_info"
-            android:background="@android:color/transparent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:background="@android:color/transparent"
+            android:contentDescription="@null"
             android:onClick="changeScenes"
-            android:contentDescription="@null" />
+            android:src="@drawable/ic_info" />
 
         <TextView
             android:id="@+id/text1"
-            android:text="@string/baconText"
-            android:layout_marginEnd="5pt"
-            android:layout_marginBottom="5pt"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title"
-            android:maxLines="2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toStartOf="@+id/btn" />
+            android:layout_marginBottom="5pt"
+            android:layout_marginEnd="5pt"
+            android:layout_toStartOf="@+id/btn"
+            android:maxLines="2"
+            android:text="@string/baconText"
+            android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
         <TextView
             android:id="@android:id/text2"
-            android:text="@string/baconTitle"
-            android:layout_below="@+id/text1"
-            android:textColor="@android:color/holo_red_light"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/text1"
+            android:text="@string/baconTitle"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textColor="@android:color/holo_red_light" />
 
     </RelativeLayout>
 </LinearLayout>
