--- a/app/src/main/res/layout/activity_view_image.xml
+++ b/app/src/main/res/layout/activity_view_image.xml
@@ -1,5 +1,6 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ViewImageActivity">
@@ -10,9 +11,11 @@
         android:clipToPadding="false"
         android:orientation="vertical">
 
-        <FrameLayout
+        <android.support.v7.widget.CardView
+            style="@style/CardViewStyle"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:cardBackgroundColor="@android:color/white">
 
             <br.com.materialdesign.util.SquareImageView
                 android:id="@+id/image"
@@ -20,7 +23,7 @@
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop" />
 
-        </FrameLayout>
+        </android.support.v7.widget.CardView>
 
     <LinearLayout
         android:id="@+id/description"
