--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -1,11 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<br.com.materialdesign.util.SquareImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/image"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:adjustViewBounds="true"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_view"
+    style="@style/CardViewStyle"
     android:clickable="true"
-    android:elevation="6dp"
-    android:scaleType="centerCrop"
-    android:stateListAnimator="@animator/raise"
-    android:transitionName="@string/transition_photo" />
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:cardBackgroundColor="@android:color/white">
+
+    <br.com.materialdesign.util.SquareImageView
+        android:id="@+id/image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:adjustViewBounds="true"
+        android:elevation="6dp"
+        android:scaleType="centerCrop"
+        android:stateListAnimator="@animator/raise"
+        android:transitionName="@string/transition_photo" />
+
+</android.support.v7.widget.CardView>
