--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,9 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="black_overlay">#66000000</color>
+
+    <color name="colorControlHighlight">#80E91E63</color>
+    <color name="grey_500">#E91E63</color>
+    <color name="grey_700">#C2185B</color>
+
 </resources>
